# on-va-tout-faire-ici

./: CMakeLists.txt  on_va_tout_faire_ici.cpp  on_va_tout_faire_ici.h
common/: test_réarrangement.cpp  test_réarrangement.h
